# causaltensor

./: .gitattributes  .gitignore  LICENSE  README.md  pyproject.toml
causaltensor/cauest/: DID.py  DebiasConvex.py  MCNNM.py  OLS.py  RobustSyntheticControl.py  SDID.py  SDID_test.ipynb  __init__.py
causaltensor/matlib/: __init__.py  generation_treatment_pattern.py
causaltensor/tests/: distribution_test.ipynb
docs/: Makefile  api.rst  changelog.rst  conf.py  debiasconvex_nonnegative_guardrails.md  index.rst  mcnnm_nonnegative_baselines.md  usage.rst
docs/assets/: make_causal_panel_assets.py
docs/source/: api.rst  changelog.rst  conf.py
docs/tmp/mydocs/: .buildinfo  api.html  genindex.html  index.html  objects.inv  ref.html  search.html  searchindex.js  usage.html
docs/tutorials/: 01_real_observed_panels.rst  02_synthetic_dgp.rst  03_semi_synthetic_benchmarks.rst  04_inspecting_results.rst
src/causaltensor/: __init__.py
src/causaltensor/analysis/: __init__.py  aa_tests.py  load_tests.py  power_analysis.py  readme.md  real_dataset_report.py  semi_synthetic.py  synthetic_ablation.py
src/causaltensor/cauest/: CovariancePCA.py  DID.py  DebiasConvex.py  DebiasConvexMissing.py  DebiasConvexMultipleTreatment.py  MCNNM.py  Multiple_Interventions.py  OLSSyntheticControl.py  OLSSyntheticControl_old.py  Readme.ipynb  RobustSyntheticControl.py  Row_Specific_Treatments.py  SDID.py  SyntheticControl.py  __init__.py  panel_solver.py  result.py
src/causaltensor/datasets/: __init__.py  dataset_loader.py  panel_dataset.py
src/causaltensor/legacy/: README.md
src/causaltensor/matcomple/: hard_impute.py
src/causaltensor/matlib/: generation.py  generation_treatment_pattern.py  util.py
src/causaltensor/real/: __init__.py  estimate.py
src/causaltensor/sample_data/: fetch.ipynb  fetch.py
src/causaltensor/semi_synthetic/: __init__.py  aa_test.py  empirical_power.py  experiment.py  utils.py
src/causaltensor/semi_synthetic_experiments/: semi_synthetic_main.py  semi_synthetic_utils.py
src/causaltensor/synthetic/: __init__.py  dgp.py  utils.py
src/causaltensor/tests/: test_class.py  test_estimators.py  test_real_class.py  test_result_summary_and_plots.ipynb  test_synthetic_class.py
src/causaltensor/utils/: __init__.py  common.py  linalg.py  panel.py  treatment_patterns.py
tests/: MCNNM_test.ipynb  Panel Data Example local.ipynb  Panel Data Example.ipynb  Panel_Regression_with_Multiple_Interventions.ipynb  rank_test.ipynb  readme_synth_matlab.txt  sales.p  synthetic_control.ipynb  test_DC_PR.ipynb  test_debiasconvex_nonnegative_guardrails.py  test_mcnnm_baseline_projection.py  test_mcnnm_fit.py  test_panel_dataset_constructors.py
tests/legacy/: SDID_test.ipynb  distribution_test.ipynb  ols_synthetic_control.ipynb  semi_synthetic.ipynb
tutorials/: Panel Data Example.ipynb  Panel_Data_Example.ipynb  Panel_Regression_with_Multiple_Interventions.ipynb  datasets.ipynb  debiasconvex_nonnegative_guardrails.ipynb  mcnnm_nonnegative_baselines.ipynb  synth_code.m
tutorials/guides/: 01_real_observed_panels.ipynb  02_synthetic_dgp.ipynb  03_semi_synthetic_benchmarks.ipynb  04_inspecting_results.ipynb  panel_dataset_quickstart.ipynb
tutorials/legacy/: README.md  datasets.ipynb
(+48 files in other folders)
