[build-system]
requires = ["setuptools", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "causaltensor"
version = "0.1.6"
description = "Package for causal inference in panels"
readme = "README.md"
authors = [{ name = "Tianyi Peng", email = "tianyipeng95@gmail.com"}]
license = { file = "LICENSE" }
classifiers = [
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python",
    "Programming Language :: Python :: 3",
    "Topic :: Scientific/Engineering",
    "Intended Audience :: Science/Research",
]
keywords = ["causal", "inference", "panel", "matrix", "tensor"]
dependencies = [
    "numpy",
    'importlib-metadata; python_version<"3.11"',
]

requires-python = ">=3"

[project.urls]
Homepage = "https://github.com/TianyiPeng/causaltensor"

[project.optional-dependencies]
dev = ['cvxopt']

# ... other project metadata fields as specified in:
#     https://packaging.python.org/en/latest/specifications/declaring-project-metadata/