[tool.poetry]
name = "causaltensor"
version = "0.1.9"
description = "Package for causal inference in panels"
authors = ["Tianyi Peng <tianyipeng95@gmail.com>",
           "Arushi Jain <arushijain1154@gmail.com>"]
license = "MIT"
readme = "README.md"
homepage = "https://github.com/TianyiPeng/causaltensor"
repository = "https://github.com/TianyiPeng/causaltensor"
classifiers = [
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python",
    "Programming Language :: Python :: 3",
    "Topic :: Scientific/Engineering",
    "Intended Audience :: Science/Research",
]
keywords = ["causal", "inference", "panel", "matrix", "tensor"]

[tool.poetry.dependencies]
python = "^3.10"
numpy = "^1.18"
importlib-metadata = {version = "^3.0", python = "<=3.11"}
toolz = "^0.12.1"
matplotlib = "^3.8.0"
pandas = "^2.1.0"
scikit-learn = "^1.6.1"

[tool.poetry.group.dev.dependencies]
pytest = "^8.1.1"
cvxpy = "^1.4.3"
cvxopt = "^1.2"
ipython = "^8.23.0"
build = "^1.0.3"
twine = "^5.0.0"
ipykernel = "^6.29.0"


[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"